# shareStream

./: .gitignore  Cargo.toml
src/: device.rs  main.rs
